# client_analyze_agent

./: .bandit.yml  .env.example  .gitignore  .replit  .ruff.toml  ANALYSIS_REPORT.md  ARCHITECTURE_DECISIONS.md  CODE_ANALYSIS_REPORT.md  CODE_STRUCTURE.md  DEVELOPMENT_PLAN.md  Dockerfile  FINAL_ANALYSIS_REPORT.md  IMPROVEMENT_PLAN.md  LINTER_FIXES.md  MAKE_ALL_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PHASE_1_TARANTOOL_REPOSITORY_COMPLETE.md  PHASE_2_PROGRESS.md  PRODUCTION_READINESS_PLAN.md  PROJECT_AUDIT_REPORT.md  QUICK_IMPROVEMENTS.md  README.md  REFACTORING_COMPLETE_REPORT.md  REFACTORING_SESSION_REPORT.md  SECURITY_UPDATES.md  STREAMLIT_FIX_FINAL.md  SUMMARY.md  TODAY_SUMMARY.md  UI_UX_FINAL_REPORT.md  UPDATED_DEVELOPMENT_PLAN.md  WORK_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini  replit.md  run.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: main.py  settings.py  streamlit_app.py
app/advanced_funcs/: logging_client.py  utils.py
app/agents/: analyzer.py  client_workflow.py  data_collector.py  executor.py  file_writer.py  llm_init.py  llm_manager.py  orchestrator.py  planner.py  report_analyzer.py  risk_calculator.py  search.py  web_scraper.py  workflow.py
app/api/: compat.py  error_handlers.py  rate_limit.py  (+2 more)
attached_assets/: Pasted---1765866142364_1765866142365.txt  Pasted--Senior-Python-debugger-LangChain-FastAPI-FastMCP-Taran_1765886202524.txt  Pasted-Task-Refactor-LLM-Provider-Add-Search-Tools-and-Update-_1765958538821.txt
config/: app.dev.yaml
docs/: API_REFERENCE.md  DEPLOYMENT_RUNBOOK.md  TROUBLESHOOTING.md  USER_GUIDE.md
tests/: conftest.py  test_data_collector.py  test_e2e_workflow.py  test_feedback_api.py  test_messaging.py  test_p0_1_timeouts.py  test_p0_2_wait_for.py  test_p0_3_5_mcp_refactor.py  test_p0_3_perplexity_recency.py  test_p0_4_pagination_protection.py  test_pdf_generator.py  test_report_schema.py  test_repositories.py  test_tarantool_smoke.py
(+140 files in other folders)
